[package]
name = "example_use"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
signalbot_rs = { path = "../signalbot_rs" }
serde = { version = "1.0", features = ["derive"] }
envy = "0.4.2"
